# synthesis-task

./: CMakeLists.txt  README.md  main.cpp  synthesis-task
include/: audiomenu.h  number_traits.h  synthesizer.hpp  wav.hpp
src/: audiomenu.cpp
ui/: audiomenu.ui
